--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -3,6 +3,18 @@
 	margin-top: 2em;
 }
 
+p {
+     font-variant: small-caps;
+}
+
+.project p {
+     font-variant: small-caps;
+}
+
+#project1 {
+     font-variant: small-caps;
+}
+
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
 	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
